--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,16 +1,3 @@
-.landing_page-container {
-    height: 85vh;
-    background-color: #11172b;
-
-    .landing-photo {
-        height: 75vh;
-        min-width: 100vw;
-        position: relative;
-        object-fit: cover;
-        display: inline-block;
-        opacity: 0.8;
-    }
-
     .search-container {
         position: relative;
         top:-2rem;
@@ -22,6 +9,7 @@
         height: 3.75rem;
         margin: 0 auto;
         background-color: white;
+        box-shadow: 0px 4px 4px rgba(10, 10, 10, 0.25);
 
         .option-container {
             padding: 0 1.375rem;
@@ -84,5 +72,5 @@
             }
         }
     }
-}
+
 
