--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -22,6 +22,7 @@
         height: 3.75rem;
         margin: 0 auto;
         background-color: white;
+        box-shadow: 0px 4px 4px rgba(10, 10, 10, 0.25);
 
         .option-container {
             padding: 0 1.375rem;
