--- a/src/components/PropertyPage/PropertyPage.scss
+++ b/src/components/PropertyPage/PropertyPage.scss
@@ -1,10 +1,228 @@
-.large-image_container {
+.main-property {
+  margin: 0rem 240px;
+
+  .large-image_container {
     position: relative;
     display: inline-block;
     float: left;
     top: 5rem;
     width: 50%;
     .carousel .thumbs-wrapper {
-        margin: unset;
+      margin: unset;
     }
+  }
+  .image-button_container {
+    position: relative;
+    height: 100%;
+    top: 4rem;
+    .back-button {
+      background: #1314136b;
+      height: 100%;
+      position: absolute;
+      z-index: 1;
+      height: 510px;
+      display: table;
+      margin: 0.5rem;
+      width: 50px;
+    }
+    .next-button {
+      background: #1314136b;
+      height: 100%;
+      position: absolute;
+      right: -10px;
+      z-index: 1;
+      display: table;
+      height: 510px;
+      width: 50px;
+      margin: 0.5rem;
+    }
+    img {
+      width: 50px;
+      height: 100%;
+      display: table-cell;
+      vertical-align: middle;
+    }
+  }
+  .image-grid_container {
+    position: relative;
+    top: 4rem;
+    width: 100%;
+
+    .image {
+      position: relative;
+      display: inline-block;
+      float: left;
+      &:first-child {
+        width: 65%;
+        height: 510px;
+        margin-right: 0.5rem;
+      }
+      &:nth-child(2) {
+        width: 34%;
+        margin-bottom: 0.25rem;
+        height: 250px;
+      }
+      &:nth-child(3) {
+        width: 34%;
+        margin-top: 0.25rem;
+        height: 250px;
+      }
+      img {
+        object-fit: cover;
+        width: 100%;
+        margin: 0.5rem;
+        vertical-align: bottom;
+        height: 100%;
+        border-radius: 4px;
+      }
+    }
+  }
+
+  .agent-information {
+    position: relative;
+    display: inline-block;
+    top: 5rem;
+    float: right;
+    width: 40%;
+    height: 40rem;
+    .horizontal-options {
+      margin: 0rem 5rem;
+      .contact-number,
+      .contact-whatsapp {
+        margin: 0.5rem 0rem;
+      }
+      .contact-number {
+        font-weight: 600;
+        text-decoration: underline 1px #8046f1;
+        text-underline-position: under;
+        cursor: pointer;
+        padding: 0.75rem 1rem;
+        border-radius: 4px;
+        color: #322744;
+        background-color: transparent;
+        color: #322744;
+        border: 1px solid #cdb7f1;
+        background-color: transparent;
+      }
+
+      .contact-whatsapp {
+        display: inline-flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        border: 1px solid transparent;
+        font: inherit;
+        font-weight: 600;
+        -webkit-text-decoration: none;
+        text-decoration: none;
+        letter-spacing: inherit;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -ms-appearance: none;
+        appearance: none;
+        min-width: 140px;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
+        padding: 0.75rem 1rem;
+        border-radius: 4px;
+        color: #fff;
+        border-color: #322744;
+        background-color: #322744;
+      }
+    }
+
+    .inlined-options {
+      display: inline-flex;
+      width: 70%;
+
+      div {
+        display: -webkit-inline-box;
+        display: -webkit-inline-flex;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        margin: 0rem 0.5rem;
+
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        border: 1px solid transparent;
+        font: inherit;
+        font-weight: 600;
+        -webkit-text-decoration: none;
+        text-decoration: none;
+        letter-spacing: inherit;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -ms-appearance: none;
+        appearance: none;
+        min-width: 140px;
+        text-align: center;
+        -webkit-transition: all 0.2s ease-in-out, background 0.2s linear,
+          box-shadow 0.2s linear;
+        transition: all 0.2s ease-in-out, background 0.2s linear,
+          box-shadow 0.2s linear;
+        cursor: pointer;
+        border-radius: 4px;
+        color: #322744;
+        border-color: #cdb7f1;
+        background-color: transparent;
+        padding: 0;
+        padding: 0.55rem 0.5rem;
+      }
+    }
+    .contact-number,
+    .contact-whatsapp,
+    .share-property,
+    .like-property {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+
+      .contact-icon {
+        width: 25px;
+        height: 25px;
+        margin-right: 10px;
+      }
+    }
+    .main-agent-information {
+      display: inline-block;
+      vertical-align: middle;
+      max-height: 100px;
+      position: relative;
+      margin: 2rem;
+      .agent-chunk {
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        display: inline-block;
+        font-size: 20px;
+        text-align: left;
+        width: 50%;
+        margin: 0rem 1rem;
+
+        .agent-profile {
+          text-decoration: underline;
+        }
+      }
+
+      .agent-picture {
+        max-width: 100px;
+        object-fit: contain;
+        max-height: 100px;
+        display: inline-block;
+      }
+    }
+  }
 }
