--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -23,6 +23,9 @@
     &.navbar-home {
         background: none;
     }
+    &.hidden {
+        position: relative;
+    }
     .navbar-logo {
     position: relative;
     float: left;
