--- a/src/components/PropertyPage/PropertyPage.scss
+++ b/src/components/PropertyPage/PropertyPage.scss
@@ -1,6 +1,6 @@
 .main-property {
   margin: 0rem 240px;
-
+  height: 100vh;
   .large-image_container {
     position: relative;
     display: inline-block;
@@ -13,7 +13,6 @@
   }
   .image-button_container {
     position: relative;
-    height: 100%;
     top: 4rem;
     .back-button {
       background: #1314136b;
@@ -47,7 +46,7 @@
     position: relative;
     top: 4rem;
     width: 100%;
-
+    height: 30%;
     .image {
       position: relative;
       display: inline-block;
@@ -77,151 +76,229 @@
       }
     }
   }
-
-  .agent-information {
+  .property-information {
     position: relative;
-    display: inline-block;
     top: 5rem;
-    float: right;
-    width: 40%;
-    height: 40rem;
-    .horizontal-options {
-      margin: 0rem 5rem;
-      .contact-number,
-      .contact-whatsapp {
-        margin: 0.5rem 0rem;
-      }
-      .contact-number {
-        font-weight: 600;
-        text-decoration: underline 1px #8046f1;
-        text-underline-position: under;
-        cursor: pointer;
-        padding: 0.75rem 1rem;
-        border-radius: 4px;
-        color: #322744;
-        background-color: transparent;
-        color: #322744;
-        border: 1px solid #cdb7f1;
-        background-color: transparent;
-      }
-
-      .contact-whatsapp {
-        display: inline-flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-align-items: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        border: 1px solid transparent;
-        font: inherit;
-        font-weight: 600;
-        -webkit-text-decoration: none;
-        text-decoration: none;
-        letter-spacing: inherit;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        -ms-appearance: none;
-        appearance: none;
-        min-width: 140px;
-        text-align: center;
-        cursor: pointer;
-        width: 100%;
-        padding: 0.75rem 1rem;
-        border-radius: 4px;
-        color: #fff;
-        border-color: #322744;
-        background-color: #322744;
-      }
-    }
-
-    .inlined-options {
-      display: inline-flex;
-      width: 70%;
-
-      div {
-        display: -webkit-inline-box;
-        display: -webkit-inline-flex;
-        display: -ms-inline-flexbox;
-        display: inline-flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-align-items: center;
-        margin: 0rem 0.5rem;
-
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        border: 1px solid transparent;
-        font: inherit;
-        font-weight: 600;
-        -webkit-text-decoration: none;
-        text-decoration: none;
-        letter-spacing: inherit;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        -ms-appearance: none;
-        appearance: none;
-        min-width: 140px;
-        text-align: center;
-        -webkit-transition: all 0.2s ease-in-out, background 0.2s linear,
-          box-shadow 0.2s linear;
-        transition: all 0.2s ease-in-out, background 0.2s linear,
-          box-shadow 0.2s linear;
-        cursor: pointer;
-        border-radius: 4px;
-        color: #322744;
-        border-color: #cdb7f1;
-        background-color: transparent;
-        padding: 0;
-        padding: 0.55rem 0.5rem;
-      }
-    }
-    .contact-number,
-    .contact-whatsapp,
-    .share-property,
-    .like-property {
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-
-      .contact-icon {
-        width: 25px;
-        height: 25px;
-        margin-right: 10px;
-      }
-    }
-    .main-agent-information {
+    width: 60%;
+    text-align: left;
+    float: left;
+    height: 100%;
+    display: inline-block;
+    font-family: "Montserrat";
+    color: #444444;
+    .property-title {
+      font-size: 30px;
+      font-weight: 700;
+      padding-top: 1rem;
       display: inline-block;
-      vertical-align: middle;
-      max-height: 100px;
-      position: relative;
-      margin: 2rem;
-      .agent-chunk {
-        display: inline-block;
-        vertical-align: top;
-        position: relative;
-        display: inline-block;
-        font-size: 20px;
-        text-align: left;
-        width: 50%;
-        margin: 0rem 1rem;
+    }
+    .date-added {
+      display: inline-block;
+      float: right;
+      padding: 1rem;
+    }
+    .property-address {
+      font-size: 22px;
+      font-weight: 500;
+    }
 
-        .agent-profile {
-          text-decoration: underline;
+    .features {
+      padding: 1rem 0rem;
+      .property-features {
+        font-size: 25px;
+        font-weight: 700;
+      }
+      ul {
+        position: relative;
+        padding-left: 15px;
+        li {
+          text-transform: capitalize;
+          display: inline-block;
+          line-height: 2rem;
+          width: 50%;
+          position: relative;
+          &::before {
+            background-color: #2611e0;
+            border-radius: 100%;
+            content: "";
+            display: inline-block;
+            height: 8px;
+            width: 8px;
+            position: absolute;
+            top: 10px;
+            left: -15px;
+          }
+        }
+      }
+    }
+    .description {
+      white-space: pre-line;
+    }
+  }
+  .right {
+    position: relative;
+    top: 5rem;
+    width: 40%;
+    height: 100%;
+    float: right;
+
+    .property-price {
+      display: inline-block;
+      position: relative;
+      font-size: 25px;
+      box-shadow: 0 2px 16px 0 #0000146e;
+      width: 200px;
+
+      &.price-fixed {
+        position: sticky;
+        top: 0rem;
+      }
+    }
+    .agent-information {
+      position: relative;
+      display: inline-block;
+      &.price-fixed {
+        position: sticky;
+        top: 30px;
+      }
+      .horizontal-options {
+        margin: 0rem 5rem;
+        .contact-number,
+        .contact-whatsapp {
+          margin: 0.5rem 0rem;
+        }
+        .contact-number {
+          font-weight: 600;
+          text-decoration: underline 1px #8046f1;
+          text-underline-position: under;
+          cursor: pointer;
+          padding: 0.75rem 1rem;
+          border-radius: 4px;
+          color: #322744;
+          background-color: transparent;
+          color: #322744;
+          border: 1px solid #cdb7f1;
+          background-color: transparent;
+        }
+
+        .contact-whatsapp {
+          display: inline-flex;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          -webkit-justify-content: center;
+          justify-content: center;
+          -webkit-align-items: center;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          border: 1px solid transparent;
+          font: inherit;
+          font-weight: 600;
+          -webkit-text-decoration: none;
+          text-decoration: none;
+          letter-spacing: inherit;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          -ms-appearance: none;
+          appearance: none;
+          min-width: 140px;
+          text-align: center;
+          cursor: pointer;
+          width: 100%;
+          padding: 0.75rem 1rem;
+          border-radius: 4px;
+          color: #fff;
+          border-color: #322744;
+          background-color: #322744;
         }
       }
 
-      .agent-picture {
-        max-width: 100px;
-        object-fit: contain;
-        max-height: 100px;
+      .inlined-options {
+        display: inline-flex;
+        width: 70%;
+
+        div {
+          display: -webkit-inline-box;
+          display: -webkit-inline-flex;
+          display: -ms-inline-flexbox;
+          display: inline-flex;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          -webkit-justify-content: center;
+          justify-content: center;
+          -webkit-align-items: center;
+          margin: 0rem 0.5rem;
+
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          border: 1px solid transparent;
+          font: inherit;
+          font-weight: 600;
+          -webkit-text-decoration: none;
+          text-decoration: none;
+          letter-spacing: inherit;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          -ms-appearance: none;
+          appearance: none;
+          min-width: 140px;
+          text-align: center;
+          -webkit-transition: all 0.2s ease-in-out, background 0.2s linear,
+            box-shadow 0.2s linear;
+          transition: all 0.2s ease-in-out, background 0.2s linear,
+            box-shadow 0.2s linear;
+          cursor: pointer;
+          border-radius: 4px;
+          color: #322744;
+          border-color: #cdb7f1;
+          background-color: transparent;
+          padding: 0;
+          padding: 0.55rem 0.5rem;
+        }
+      }
+      .contact-number,
+      .contact-whatsapp,
+      .share-property,
+      .like-property {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+
+        .contact-icon {
+          width: 25px;
+          height: 25px;
+          margin-right: 10px;
+        }
+      }
+      .main-agent-information {
         display: inline-block;
+        vertical-align: middle;
+        max-height: 100px;
+        position: relative;
+        margin: 2rem;
+        .agent-chunk {
+          display: inline-block;
+          vertical-align: top;
+          position: relative;
+          display: inline-block;
+          font-size: 20px;
+          text-align: left;
+          width: 50%;
+          margin: 0rem 1rem;
+
+          .agent-profile {
+            text-decoration: underline;
+          }
+        }
+
+        .agent-picture {
+          max-width: 100px;
+          object-fit: contain;
+          max-height: 100px;
+          display: inline-block;
+        }
       }
     }
   }
