Results page design done

--- a/src/components/HorizontalListing/HorizontalListing.scss
+++ b/src/components/HorizontalListing/HorizontalListing.scss
@@ -4,6 +4,8 @@
     text-align: left;
     box-shadow: 0 2px 17px 2px #2726261a;
     margin-bottom: 20px;
+    border-radius: 8px;
+    background-color: white;
     position: relative;
 }
 
