--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,7 +11,7 @@
 
 .navbar-container {
     padding: 0.4rem 100px;
-    position: fixed;
+    position: relative;
     background-color: grey;
     z-index: 545454;
     width: 100%;
