--- a/src/components/ResultsPage/ResultsPage.scss
+++ b/src/components/ResultsPage/ResultsPage.scss
@@ -1,159 +1,255 @@
 .filters-row {
-    padding: 0rem 5rem;
-    height: 3rem;
-    position: relative;
-    top: 4rem;
-    z-index: 999;
-    justify-content: space-between;
-    background: #11172b;
-    color: white;
-    display: flex;
-    
-    .location-input {
-        width: 25%;
-        margin: 0.3rem;
-    }
-    div, input{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    span {
-        padding: 0rem 1rem;
-        color: hsla(0,0%,100%,.5);
-        font-weight: 100;
-    }
-    select {
-        color: white;
-        border: none;
-        height: 100%;
-        font-size: 16px;
-        background-color: #11172b;
-    }
-    svg {
-        padding-left: 0.5rem;
-    }
-    path {
-        stroke: #f93e3e;
-        stroke-width: 2;
-    }
-}
-.properties-filter{
-    position: absolute;
-    width: 100%;
-    height: 0rem;
-    z-index: 998;
-    -moz-transition: height .5s;
-    -ms-transition: height .5s;
-    -o-transition: height .5s;
-    -webkit-transition: height .5s;
-    transition: height .5s;
-    background: red;
+  padding: 0rem 5rem;
+  height: 3rem;
+  position: sticky;
+  z-index: 999;
+  top: 0;
+  justify-content: space-between;
+  background: #11172b;
+  color: white;
+  display: flex;
 
-    &.expand-properties {
-        -moz-transition: height .5s;
-        -ms-transition: height .5s;
-        -o-transition: height .5s;
-        -webkit-transition: height .5s;
-        transition: height .5s;
-        height: 25rem;
+  .location-input {
+    width: 25%;
+    margin: 0.3rem;
+  }
+  div,
+  input {
+    display: flex;
+    margin: 0rem 1rem;
+    align-items: center;
+    justify-content: center;
+  }
+  span {
+    padding: 0rem 1rem;
+    color: hsla(0, 0%, 100%, 0.5);
+    font-weight: 100;
+  }
+  select {
+    color: white;
+    border: none;
+    margin: 1rem;
+    outline: none;
+    border: none;
+    height: 100%;
+    font-size: 16px;
+    background-color: #11172b;
+  }
+  svg {
+    padding-left: 0.5rem;
+  }
+  path {
+    stroke: #f93e3e;
+    stroke-width: 2;
+  }
+  .property-filter {
+    &.expanded {
+      background-color: white;
+      color: #11172b;
     }
+  }
+}
+.properties-filter {
+  position: absolute;
+  width: 100%;
+  height: 0rem;
+  padding: 1.5rem 0rem;
+  top: 4rem;
+  z-index: 998;
+  overflow: hidden;
+  -moz-transition: height 0.5s;
+  -ms-transition: height 0.5s;
+  -o-transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  transition: height 0.5s;
+  background: white;
+  .icon-container {
+    padding-top: 3rem;
+    span {
+        display: none;
+    }
+    img, svg {
+        width: 6rem;
+        height: 0rem;
+        color: #11172bee;
+        display: inline-flex;
+        padding: 1rem 2rem;
+      }
+  }
+  &.expand-properties {
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
+    -webkit-transition: height 0.5s;
+    transition: height 0.5s;
+    display: table;
+ 
+    .icon-container {
+      display: table-cell;
+      vertical-align: middle;
+      position: relative;
+
+      div {
+        display: inline-block;
+        padding: 0rem 1.5rem;
+        &.selected {
+          span {
+            border-radius: 5px;
+            color: white;
+            background-color: #11172b;
+          }
+          img, svg {
+           color: #11172b
+          }
+        }
+
+        &.first-child {
+          border-right: 1px dashed black;
+        }
+        &:not(:first-child) {
+          border-left: 1px dashed black;
+        }
+        span {
+          display: block;
+          width: 100%;
+          padding: 0.2rem 0rem;
+        }
+      }
+      img, svg {
+        width: 6rem;
+        height: 7rem;
+        color: #11172bee;
+        display: inline-flex;
+        -moz-transition: height 0.3s;
+        -ms-transition: height 0.3s;
+        -o-transition: height 0.3s;
+        -webkit-transition: height 0.3s;
+        transition: height 0.3s;
+        padding: 1rem 2rem;
+      }
+    }
+  }
 }
 .more-filters {
-    position: absolute;
-    width: 100%;
-    height: 0rem;
-    z-index: 998;
-    -moz-transition: height .5s;
-    -ms-transition: height .5s;
-    -o-transition: height .5s;
-    -webkit-transition: height .5s;
-    transition: height .5s;
-    background: red;
-    &.expand-filters {
-        -moz-transition: height .5s;
-        -ms-transition: height .5s;
-        -o-transition: height .5s;
-        -webkit-transition: height .5s;
-        transition: height .5s;
-        height: 25rem;
+  position: absolute;
+  width: 100%;
+  height: 0rem;
+  z-index: 998;
+  overflow: hidden;
+  -moz-transition: height 0.5s;
+  -ms-transition: height 0.5s;
+  -o-transition: height 0.5s;
+  -webkit-transition: height 0.5s;
+  transition: height 0.5s;
+  background: white;
+  &.expand-filters {
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
+    -webkit-transition: height 0.5s;
+    transition: height 0.5s;
+    height: 25rem;
+    top: 7rem;
+    .filter-options {
+        display: inline-block;
+        position: relative;
+        width: 20%;
+        margin: 1rem;
+        padding: 5px 15px;
+        color: #11172b;
+        border: 1px solid #bbb;
+        border-radius: 5px;
+        text-align: center;
+        &.selected {
+            background-color: #262637;
+            color: #fff;
+            border-color: #262637;
+            border: 1px solid #bbb;
+        }
     }
+  }
 }
 .pagina-resultados {
-    padding: 0rem 5rem;
-    height: 100vh;
-    
-    .horizontal-results {
-        margin: 20px;
-    
-        .number-results {
-            display: inline-block;
-            float: left;
-        }
-        .order-by {
-            text-align: right;
-
-            span {
-                margin: 10px;
-            }
-        }
-}
-    .filtro-izquierda {
-        width: 25%;
-        height: 100%;
-        float: left;
-        display: inline-block;
+  height: 100vh;
+  position: relative;
+  .horizontal-results {
+    margin: 20px;
+    padding-right: 1rem;
+    padding-left: 4rem;
+    .number-results {
+      display: inline-block;
+      float: left;
     }
+    .order-by {
+      text-align: right;
+      width: 75%;
 
-    .resultados-derecha {
-        width: 70%;
-        height: 100%;
+      span {
+        margin: 10px;
+      }
+    }
+  }
+  .results-left {
+    width: 65%;
+    height: 100%;
+    float: left;
+    padding: 1rem 0rem;
+    padding-left: 6rem;
+    padding-right: 1rem;
+    background-color: #e9e9eb;
+    display: inline-block;
+    .image-listing {
         display: inline-block;
-    
-        .image-listing {
-            display: inline-block;
-            overflow: hidden;
-            width: 220px;
-            height: 100%;
-            img {
-                background-size: cover;
-                overflow: none;
-                height: 100%;
-                width: 100%;
-                object-fit: cover;
-                margin: 0 auto;
-            }
+        overflow: hidden;
+        width: 220px;
+        height: 100%;
+        img {
+          background-size: cover;
+          overflow: none;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          margin: 0 auto;
         }
-        .information-listing {
-            height: 100%;
-            width: 50%;
-            position: relative;
-            vertical-align: top;
-            overflow: hidden;
-            padding: 10px 35px 10px 15px;
-            display: inline-block;
-        
-        .listing-title, .listing-address {
-            position: relative;
-            width: 100%;
-            display: inline-block;
-            overflow: hidden;
-            
+      }
+      .information-listing {
+        height: 100%;
+        width: 50%;
+        position: relative;
+        vertical-align: top;
+        overflow: hidden;
+        padding: 10px 35px 10px 15px;
+        display: inline-block;
+  
+        .listing-title,
+        .listing-address {
+          position: relative;
+          width: 100%;
+          display: inline-block;
+          overflow: hidden;
         }
         .listing-title {
-            font-weight: 500;
+          font-weight: 500;
         }
         .listing-description {
-            overflow: hidden;
-            text-align: left;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            line-clamp: 2;
-            -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-align: left;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          line-clamp: 2;
+          -webkit-box-orient: vertical;
         }
+      }
+    }
+  }
 
-    }
-    }
+  .information-right {
+    width: 20%;
+    height: 100%;
+    background-color: #ffffff;
+    z-index: 2;
+    position: relative;
+    padding-right: 6rem;
+    display: inline-block;
 }
-
