--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
+  height: 100%;
+  background-color: #fafbfc;
 }
-
+#root {
+  height: 100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
