--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,7 +3,7 @@
     width: 100%;
     padding: 1rem;
     z-index: 9999999999;
-    background-color: grey;
+    background-color: #11172b;
     .search-container {
         top: unset;
     }
@@ -12,7 +12,7 @@
 .navbar-container {
     padding: 0.4rem 100px;
     position: relative;
-    background-color: grey;
+    background-color: #11172b;
     z-index: 545454;
     width: 100%;
     box-sizing: border-box;
