--- a/src/components/PropertyPage/PropertyPage.scss
+++ b/src/components/PropertyPage/PropertyPage.scss
@@ -95,7 +95,7 @@
     .date-added {
       display: inline-block;
       float: right;
-      padding: 1rem;
+      padding-top: 1rem;
     }
     .property-address {
       font-size: 22px;
