--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   height: 100%;
-  background-color: #fafbfc;
+  background-color: #f2f3f7;
 }
 #root {
   height: 100%;
