--- a/src/components/GeneralSettings/GeneralSettings.scss
+++ b/src/components/GeneralSettings/GeneralSettings.scss
@@ -1,104 +1,41 @@
-.account-container {
-  width: 90%;
-  margin: 0 auto;
-  height: 60%;
+.general-wrapper {
 
-  .top-information {
+.input-container {
+  text-align: left;
+}
+.input-wrapper {
+  display: inline-block;
+  width: 35%;
+
+  padding-right: 4rem;
+  padding-bottom: 1rem;
+
+  span {
+    display: block;
+    width: 100%;
+    margin: 0.5rem 0rem;
     text-align: left;
-    padding: 2rem 0rem;
-    h1 {
-      color: #212433;
-      font-weight: 700;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #6d6b80;
+  }
+
+  input {
+    width: 100%;
+    padding: 0.8rem;
+    border-radius: 9px;
+    font-size: 15px;
+    color: black;
+    font-weight: 500;
+    border: 1px solid #dbdadf;
+
+    &:hover {
+      border: 1px solid #6d6b80;
     }
-    h3 {
-      color: #6d6d7b;
-      font-weight: 400;
+    &:focus {
+      border: 1px solid #6d6b80;
     }
   }
-  .settings-container {
-    position: relative;
-    background-color: white;
-    border-radius: 5px;
-    height: 80%;
-    .left-panel {
-      width: 20%;
-      display: inline-block;
-      border-right: 1.5px solid #f2f3f7;
-      height: 100%;
-      padding: 1rem 0rem;
-      float: left;
-      .left-panel_text {
-        span {
-          color: #6b6a7a;
-          font-family: 'Public Sans';
-          letter-spacing: 0.2px;
-          font-size: 18px;
-          font-weight: 400;
-        }
-        &.active {
-          span {
-            color: #252837;
-          }
-          svg {
-            fill: #185ab9;
-          }
-        }
-        
-      }
-    }
-
-    .right-panel {
-      width: 70%;
-      padding: 1rem 0rem;
-      display: inline-block;
-      h3 {
-        text-align: left;
-        font-size: 1.5rem;
-        font-weight: 600;
-        margin: 0;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        color: #212531;
-      }
-
-      .input-container {
-        text-align: left;
-      }
-      .input-wrapper {
-        display: inline-block;
-        width: 35%;
-
-        padding-right: 4rem;
-        padding-bottom: 1rem;
-
-        span {
-          display: block;
-          width: 100%;
-          margin: 0.5rem 0rem;
-          text-align: left;
-          font-weight: 600;
-          text-transform: uppercase;
-          font-size: 13px;
-          color: #6d6b80;
-        }
-
-        input {
-          width: 100%;
-          padding: 0.8rem;
-          border-radius: 9px;
-          font-size: 15px;
-          color: black;
-          font-weight: 500;
-          border: 1px solid #dbdadf;
-
-          &:hover {
-            border: 1px solid #6d6b80;
-          }
-          &:focus {
-            border: 1px solid #6d6b80;
-          }
-        }
-      }
-    }
-  }
+}
 }
