Added landing page features

--- a/src/components/Inbox/Inbox.scss
+++ b/src/components/Inbox/Inbox.scss
@@ -2,12 +2,15 @@
   display: flex;
   height: calc(100% - 120px);
   align-items: center;
+  ::-webkit-scrollbar {
+    display: none;
+  }
   .left-panel {
     position: relative;
     width: 25%;
     background-color: white;
     height: 100%;
-    box-shadow: 3px 2px 7px 0 #00000036;
+
     align-items: flex-start;
     overflow-y: scroll;
     .image-grid_container {
@@ -23,15 +26,15 @@
         align-items: center;
 
         &.active {
-            background: #f2f3f7;
+          background: #f2f3f7;
         }
         .notification {
-            height: 8px;
-            margin-left: 0.5rem;
-            width: 10px;
-            background-color: #4a90f5;
-            border-radius: 50%;
-            display: inline-block;
+          height: 8px;
+          margin-left: 0.5rem;
+          width: 10px;
+          background-color: #4a90f5;
+          border-radius: 50%;
+          display: inline-block;
         }
 
         .text-container {
@@ -59,17 +62,19 @@
     display: block;
     justify-content: center;
     height: 100%;
+    margin: 0rem 2rem;
     width: 75%;
     .main-conversation {
-        position: relative;
-        height: 90%;
-        overflow-y: scroll;
-        margin-top: 1rem;
+      position: relative;
+      height: 90%;
+      overflow-y: scroll;
+      margin-top: 1rem;
       .message-container {
         width: 45%;
+        font-weight: 200;
         margin: 0rem 2rem;
         &:last-child {
-            margin-bottom: 1rem;
+          margin-bottom: 1rem;
         }
         &.l-a {
           text-align: left;
@@ -82,6 +87,7 @@
             border-radius: 15px 15px 15px 0px;
             align-items: center;
             padding: 1rem;
+            font-weight: 300;
           }
           .lower-message_container {
             img {
@@ -100,7 +106,7 @@
             background: #4a90f5;
             height: 2rem;
             color: white;
-
+            font-weight: 300;
             display: flex;
             border-radius: 9px 9px 0px 9px;
             align-items: center;
@@ -131,14 +137,15 @@
       }
     }
     .write-area {
-        position: absolute;
-        bottom: 0px;
-        background: white;
-        width: 100%;
-        overflow: hidden;
-        align-items: center;
-        display: flex;
-
+      position: absolute;
+      bottom: 0px;
+      background: white;
+      width: 100%;
+      overflow: hidden;
+      align-items: center;
+      display: flex;
+      border: 1px grey solid;
+      border-radius: 12px;
       textarea {
         border: none;
         width: 100%;
