--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -68,7 +68,7 @@
     }
     div {
       margin: 0rem 1.5rem;
-      color: #11172b;
+      color: #245abc;
       display: inline-flex;
       justify-content: end;
       padding: 0.4rem 0rem;
