--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -1,93 +1,100 @@
-body, html { /* both to be sized */
-height: 100%;
-
+body,
+html {
+  /* both to be sized */
+  height: 100%;
 }
-.landing_page-container {
-    height: 85vh;
+
+.container {
+  background-color: white;
+  .landing_page-container {
+    height: 75vh;
     background-color: #11172b;
-
+    overflow: hidden;
+    position: relative;
     .landing-photo {
-        height: 75vh;
-        min-width: 100vw;
-        position: relative;
-        object-fit: cover;
-        display: inline-block;
-        opacity: 0.8;
+      height: 75vh;
+      max-width: 100vw;
+      position: relative;
+      object-fit: cover;
+      display: inline-block;
+      opacity: 0.8;
     }
-
+    .search-bar {
+      top: -20rem;
+      position: relative;
+    }
     .search-container {
+      position: relative;
+      top: 2rem;
+      width: 75vw;
+      text-align: center;
+      z-index: 1000;
+      display: flex;
+      align-items: center;
+      height: 3.75rem;
+      margin: 0 auto;
+      background-color: white;
+      box-shadow: 0px 4px 4px rgba(10, 10, 10, 0.25);
+
+      .option-container {
+        padding: 0 1.375rem;
+
+        div {
+          display: inline-flex;
+          margin-right: 0.625rem;
+        }
+        .option-checkbox {
+          display: inline-block;
+          width: 1.3em;
+          height: 1.3em;
+        }
+      }
+      .input-container {
+        border: solid #b3b3b3;
+        border-width: 0 1px;
+        flex: 1;
         position: relative;
-        top:-2rem;
-        width: 75vw;
-        text-align: center;
-        z-index: 1000;
-        display: flex;
-        align-items: center;
-        height: 3.75rem;
-        margin: 0 auto;
-        background-color: white;
-        box-shadow: 0px 4px 4px rgba(10, 10, 10, 0.25);
-
-        .option-container {
-            padding: 0 1.375rem;
-            
-            div {
-                display: inline-flex;
-                margin-right: 0.625rem
-            }
-            .option-checkbox {
-                display: inline-block;
-                width: 1.3em;
-                height: 1.3em;
-            }
-    
+        height: 100%;
+        display: block;
+        overflow: hidden;
+        .input-search {
+          position: relative;
+          width: 100%;
+          margin: 0;
+          border: none;
+          height: 3.75rem;
+          box-sizing: border-box;
+          overflow: hidden;
+          z-index: 1;
+          font-size: 0.875rem;
+          padding: 1.25rem 1.125rem;
+          &:focus {
+            outline-width: 0;
+          }
         }
-        .input-container {
-            border: solid #b3b3b3;
-            border-width: 0 1px;
-            flex: 1;
-            position: relative;
-            height: 100%;
-            display: block;
-            overflow: hidden;
-            .input-search {
-                position: relative;
-                width: 100%;
-                margin: 0;
-                border: none;
-                height: 3.75rem;
-                box-sizing: border-box;
-                overflow: hidden;
-                z-index: 1;
-                font-size: .875rem;
-                padding: 1.25rem 1.125rem;
-                &:focus {
-                    outline-width: 0;
-                }
-            }
-        }
+      }
 
-        .region-selector {
-            min-width: 5rem;
-            position: relative;
-            height: 100%;
-        }
-        .search_button-container {
-            min-width: 10.625rem;
-            height: 100%;
+      .region-selector {
+        min-width: 5rem;
+        position: relative;
+        height: 100%;
+      }
+      .search_button-container {
+        min-width: 10.625rem;
+        height: 100%;
 
-            button {
-                width: 100%;
-                height: 100%;
-                background-color: #f93e3e;
-                position: relative;
-                font-size: .875rem;
+        button {
+          width: 100%;
+          height: 100%;
+          background-color: #f93e3e;
+          position: relative;
+          font-size: 0.875rem;
 
-                border: none;
-                color: white;
-                outline: none;
-            }
+          border: none;
+          color: white;
+          outline: none;
         }
+      }
     }
+  }
 }
-
