--- a/src/components/FeaturedRent/FeaturedRent.scss
+++ b/src/components/FeaturedRent/FeaturedRent.scss
@@ -1,6 +1,7 @@
 .landing-featured-rent {
   background-color: white;
   .saved-w {
+    text-align: left;
     position: relative;
     padding: 0rem 7rem;
     .react-multiple-carousel__arrow {
