--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -41,7 +41,8 @@
   .navbar-logo {
     height: 100px;
     width: 340px;
-    overflow: hidden;
+    overflow-y: clip;
+    overflow-x:visible;
     img {
       height: 300px;
       margin: -80px 0 0 0px;
