--- a/src/components/ResultsPage/ResultsPage.scss
+++ b/src/components/ResultsPage/ResultsPage.scss
@@ -170,8 +170,9 @@
   }
 }
 .pagina-resultados {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
+  overflow: hidden;
   .horizontal-results {
     margin: 20px;
     padding-right: 1rem;
@@ -250,6 +251,5 @@
     background-color: #ffffff;
     z-index: 2;
     position: relative;
-    padding-right: 6rem;
     display: inline-block;
 }
